--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "element-china-area-data": "^4.1.2",
     "element-ui": "^2.7.0",
     "qs": "^6.7.0",
     "vue": "^2.6.6",
